--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <img src="./img/logo-pen.png" width="50px" alt="">
+      <img src="img/logo-pen.png" width="50px" alt="">
       <a class="navbar-brand mb-0" href="#"> iblogger</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
