--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <img src="./img/logo-pen.png" width="50px" alt="">
+      <img src="img/logo-pen.png" width="50px" alt="">
       <a class="navbar-brand mb-0" href="#"> iblogger</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -129,7 +129,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/img/writing.jpeg" class="d-block w-100" alt="...">
+        <img src="img/writing.jpeg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Blog Genres</h5>
           <p>We publish different genres of blog article content regarding contemporary issues.</p>
@@ -138,7 +138,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/img/book.jpeg" class="d-block w-100" alt="...">
+        <img src="img/book.jpeg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Writer's Block</h5>
           <p>We encourage writers about building their plots on the arena of literature.</p>
@@ -147,7 +147,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="/img/envelope.jpeg" class="d-block w-100" alt="...">
+        <img src="img/envelope.jpeg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Print Knowledge</h5>
           <p>A variety of print media coverage out there relying on our published article.</p>
@@ -183,7 +183,7 @@
             <a href="about.html" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="/img/post-1.jpeg" width="200px" alt="">
+            <img src="img/post-1.jpeg" width="200px" alt="">
           </div>
         </div>
       </div>
@@ -197,7 +197,7 @@
             <a href="about.html" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="/img/post-2.jpeg" width="200px" alt="">
+            <img src="img/post-2.jpeg" width="200px" alt="">
           </div>
         </div>
       </div>
@@ -211,7 +211,7 @@
             <a href="about.html" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="/img/post-3.jpeg" width="200px" alt="">
+            <img src="img/post-3.jpeg" width="200px" alt="">
           </div>
         </div>
       </div>
@@ -225,7 +225,7 @@
             <a href="about.html" class="stretched-link">Continue reading</a>
           </div>
           <div class="col-auto d-none d-lg-block">
-            <img src="/img/post-4.jpeg" width="200px" alt="">
+            <img src="img/post-4.jpeg" width="200px" alt="">
           </div>
         </div>
       </div>
