--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
             <img src="img/logo-pen.png" width="50px" alt="">
-            <a class="navbar-brand mb-0" href="#"> iblogger</a>
+            <a class="navbar-brand mb-0" href="index.html"> iblogger</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
